UN-uniphy about us page

--- a/uniphynew/platform/index.html
+++ b/uniphynew/platform/index.html
@@ -339,6 +339,13 @@
          	--accent-color: #801BAB
          }
 
+         .content-border-top {
+            width: 200px;
+            border-radius: 3px;
+            border-top: 10px solid #ff6600;
+            display: block;
+         }
+
          @media screen and (max-width: 1024px) {
          	.features__container .boxes__wrapper--columns-four .boxes__box-item {
          		width: 28% !important;
@@ -588,6 +595,9 @@
              .Intelligent-automation-section-1 .content-image__inner--image-left 
              .content-image__image--align-left {
                justify-content: center;
+             }
+             .content-border-top {
+               display: none;
              }
          }
 
@@ -1129,7 +1139,9 @@
                               <div class="content-image__inner content-image__inner--image-left content-image__inner--">
                                  <div class="content-image__image  content-image__image--align-left  Intelligent-automation-div">
                                     <h1 class="title-default-color boxes__titlec animate__animated animate__fadeInUp Intelligent-automation-section-header">Intelligent Automation through Tools and Accelerators</h1>
-                                    <p>Intelligent Automation through Tools and Accelerators Intelligent Automation through Tools and Accelerators Intelligent Automation through Tools and Accelerators Intelligent Automation through Tools and Accelerators</p>
+                                    <div class="content-border-top"></div>
+                                    <p>Empowering enterprises with end-to-end automation, our framework seamlessly integrates tools and accelerators across every stage of the IT lifecycle. From intelligent monitoring and predictive management to optimized development workflows, resilient hybrid operations, and accelerated delivery pipelines — we drive enhanced efficiency, reliability, and measurable incident reduction through automation.</p>
+                                    <div class="content-border-bottom"></div>
                                  </div>
                                  <div class="content-image__image  content-image__image--align-center Intelligent-automation-div">
                                     <div class="d-flex navbar-expand" style="justify-content: space-around;">
