UN-about us page restructure

--- a/uniphynew/platform/index.html
+++ b/uniphynew/platform/index.html
@@ -342,7 +342,7 @@
          .content-border-top {
             width: 200px;
             border-radius: 3px;
-            border-top: 10px solid #ff6600;
+            border-top: 5px solid #ff6600;
             display: block;
          }
 
@@ -1140,7 +1140,7 @@
                                  <div class="content-image__image  content-image__image--align-left  Intelligent-automation-div">
                                     <h1 class="title-default-color boxes__titlec animate__animated animate__fadeInUp Intelligent-automation-section-header">Intelligent Automation through Tools and Accelerators</h1>
                                     <div class="content-border-top"></div>
-                                    <p>Empowering enterprises with end-to-end automation, our framework seamlessly integrates tools and accelerators across every stage of the IT lifecycle. From intelligent monitoring and predictive management to optimized development workflows, resilient hybrid operations, and accelerated delivery pipelines — we drive enhanced efficiency, reliability, and measurable incident reduction through automation.</p>
+                                    <p>Empowering enterprises with end-to-end automation through seamless tool and accelerator integration across the IT lifecycle. From intelligent monitoring to optimized development and resilient operations, we accelerate delivery pipelines for greater efficiency, reliability, and measurable incident reduct.</p>
                                     <div class="content-border-bottom"></div>
                                  </div>
                                  <div class="content-image__image  content-image__image--align-center Intelligent-automation-div">
