--- a/uniphynew/about/index.html
+++ b/uniphynew/about/index.html
@@ -9,6 +9,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="profile" href="https://gmpg.org/xfn/11">
       <link href="../assets/images/favicon.png" rel="shortcut icon" type="image/x-icon">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
       <link href="../assets/images/webclip.png" rel="apple-touch-icon">
       <!-- CSS  -->
       <link rel="stylesheet" href="../assets/css/theme.css">
@@ -415,7 +416,7 @@
                      <section class="section-block section-block--container-default section-block--theme-big-purple-bg-square section-block-header">
                         <div class="container">
                            <div class="d-flex" style="flex-direction: row; flex-wrap: wrap;">
-                              <div class="d-flex">
+                              <div class="d-flex animate__animated animate__fadeInUp">
                                  <h1 style="font-size: 4.50em !important; margin: 0 !important;">About Us</h1>
                               </div>
                            </div>
@@ -429,16 +430,16 @@
                                   style="width: 80%; background-color: white; border-radius: 15px; padding: 20px; position: relative;">
                                  <img src="../assets/images/quote-top.svg" 
                                       alt="quote top" 
-                                      class="quote-top" 
+                                      class="quote-top animate__animated animate__fadeInUp" 
                                       style="position: absolute; top: 15px; left: 15px; width: 40px;">
-                                 <p style="font-size: 30px; margin: 60px 20px; line-height: normal;">
+                                 <p style="font-size: 30px; margin: 60px 20px; line-height: normal;" class="animate__animated animate__fadeInUp">
                                    To deliver measurable business outcomes by leveraging AI-powered DevOps, intelligent automation, 
                                    and unified transformation frameworks—driving 100% release acceleration, incident elimination, 
                                    and productivity gains across enterprise ecosystems.
                                  </p>
                                  <img src="../assets/images/quote-bottom.svg" 
                                       alt="quote bottom" 
-                                      class="quote-bottom" 
+                                      class="quote-bottom animate__animated animate__fadeInUp" 
                                       style="position: absolute; bottom: 15px; right: 15px; width: 40px;">
                              </div>
                            </div>
