UN-premium pricing card change

--- a/uniphynew/pricing/index.html
+++ b/uniphynew/pricing/index.html
@@ -405,8 +405,8 @@
                                  <div class="item">
                                     <i><span>Premium</span></i>
                                  </div>
-                                 <p class="pricing-box__price" style="color:#3c3c3f!important;"><span>$999</span>/month</p>
-                                 <p class="pricing-box__terms">Custom resources</p>
+                                 <p class="pricing-box__price pricing-box__terms" style="color:#3c3c3f!important; margin-bottom: 1.25em;"><span></span>Your perfect plan starts with a chat!!!</p>
+                                 <!-- <p class="pricing-box__terms">Custom resources</p> -->
                                  <a href="../schedule-a-demo/index.html" target="" class="ns-btn dp-btn-2 animate__animated animate__fadeInUp">Schedule a demo</a>
                                  <ul class="pricing-box__features list--check-green">
                                     <li>Full platform customization & policies</li>
