UN-schedule demo alignment issue

--- a/uniphynew/schedule-a-demo/index.html
+++ b/uniphynew/schedule-a-demo/index.html
@@ -374,7 +374,9 @@
                                           </div>
                                           <!-- End Form Group -->
                                        </div>
-                                       <span id="mailstatus" class=""></span>
+                                       <div class="col-sm-12">
+                                          <span id="mailstatus" class=""></span>
+                                       </div>
                                        <div class="col-sm-12">
                                           <button id="submitbtn" type="submit" class="btn btn-block btn-primary transition-3d-hover">Submit</button>
                                        </div>
