UN-pricing update

--- a/uniphynew/pricing/index.html
+++ b/uniphynew/pricing/index.html
@@ -370,7 +370,7 @@
                                  <div class="item">
                                     <i><span>Basic</span></i>
                                  </div>
-                                 <p class="pricing-box__price"><span>$0.05</span>/month</p>
+                                 <p class="pricing-box__price"><span>$0.05</span></p>
                                  <p class="pricing-box__terms">per month per resource</p>
                                  <a href="https://uniphyops.com/" target="_blank" class="ns-btn dp-btn-0 animate__animated animate__fadeInUp" rel="noopener noreferrer">Start free trial</a>
                                  <ul class="pricing-box__features list--check-green">
@@ -388,7 +388,7 @@
                                  <div class="item">
                                     <i><span>Standard</span></i>
                                  </div>
-                                 <p class="pricing-box__price"><span>$0.35</span>/month</p>
+                                 <p class="pricing-box__price"><span>$0.35</span></p>
                                  <p class="pricing-box__terms">per month per resource</p>
                                  <a href="https://uniphyops.com/" target="_blank" class="ns-btn dp-btn-1 animate__animated animate__fadeInUp" rel="noopener noreferrer">Start free trial</a>
                                  <ul class="pricing-box__features list--check-green">
@@ -406,7 +406,7 @@
                                  <div class="item">
                                     <i><span>Premium</span></i>
                                  </div>
-                                 <p class="pricing-box__price"><span>$0.75</span>/month</p>
+                                 <p class="pricing-box__price"><span>$0.75</span></p>
                                  <p class="pricing-box__terms">per month per resource</p>
                                  <a href="https://uniphyops.com/" target="_blank" class="ns-btn dp-btn-1 animate__animated animate__fadeInUp" rel="noopener noreferrer">Start free trial</a>
                                  <ul class="pricing-box__features list--check-green">
