UN-Home page inline css to file

--- a/uniphynew/platform/index.html
+++ b/uniphynew/platform/index.html
@@ -25,9 +25,6 @@
       <link rel="stylesheet" href="../assets/css/uniphy-css.css">
       <link rel="stylesheet" href="../assets/css/theme.css">
 
-      <style type="text/css">	
-
-      </style>
       <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1' />
       <title>Uniphy</title>
 
@@ -316,7 +313,7 @@
                            <!-- .container -->
                         </section>
                         <!-- .section -->
-                        <section class="section-block section-block--container-default section-block--theme-default section-block--theme-light-purple-wave boxes boxes-2 ">
+                        <section class="section-block section-block--container-default section-block--theme-default section-block--theme-light-purple-wave boxes boxes-2 devops-lifecycle-section">
                            <!-- .container -->
                            <div class="container features-container">
                               <div class="section-block__header text-center boxes--columns-two">
